fix margin collapse in FF

--- a/ui/static/css/screen.css
+++ b/ui/static/css/screen.css
@@ -365,7 +365,8 @@ footer[role="contentinfo"] small { font-size: 1em; }
 #run .stepfail summary:hover { background: #b9292f; }
 #run .stepfail[open] summary, #run .stepfail.open summary, #run .stepfail.failed summary { background: #b9292f; }
 #run .failform textarea, #run .invalidform textarea { min-height: 9em; }
-#run .failform, #run .faildesc { margin-top: 1.5em; padding-top: 1.5em; padding-left: 1.613%; padding-right: 1.613%; background: #fef0bf; }
+#run .failform, #run .faildesc { margin-top: 1.5em; padding-top: 1.5em; padding-left: 1.613%; padding-right: 1.613%; *zoom: 1; background: #fef0bf; }
+#run .failform:after, #run .faildesc:after { content: "\0020"; display: block; height: 0; clear: both; overflow: hidden; visibility: hidden; }
 #run .invalidform, #run .invaliddesc { display: inline; float: left; padding-top: 1.5em; padding-left: 1.205%; padding-right: 1.205%; -moz-border-radius-bottomleft: 1em; -webkit-border-bottom-left-radius: 1em; -o-border-bottom-left-radius: 1em; -ms-border-bottom-left-radius: 1em; -khtml-border-bottom-left-radius: 1em; border-bottom-left-radius: 1em; -moz-border-radius-bottomright: 1em; -webkit-border-bottom-right-radius: 1em; -o-border-bottom-right-radius: 1em; -ms-border-bottom-right-radius: 1em; -khtml-border-bottom-right-radius: 1em; border-bottom-right-radius: 1em; width: 72.289%; margin-left: 8.434%; background: #fee58c; }
 #run .testinvalid { position: relative; }
 #run .testinvalid summary { text-shadow: rgba(254, 240, 191, 0.75) 1px 1px 0; -moz-border-radius-bottomleft: 1em; -webkit-border-bottom-left-radius: 1em; -o-border-bottom-left-radius: 1em; -ms-border-bottom-left-radius: 1em; -khtml-border-bottom-left-radius: 1em; border-bottom-left-radius: 1em; -moz-border-radius-bottomright: 1em; -webkit-border-bottom-right-radius: 1em; -o-border-bottom-right-radius: 1em; -ms-border-bottom-right-radius: 1em; -khtml-border-bottom-right-radius: 1em; border-bottom-right-radius: 1em; position: absolute; top: 0; right: 0; width: 13.253%; padding: 0.75em 1.205%; background: #fef0bf; text-align: center; }
